--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Arias Ui Demo</title>
-      <link type="text/css" href="src/index.css">
+      <link type="text/css" href="css/normalize.css">
   </head>
   <body>
     <div id="root">
