添加产品级的webpack配置文件.

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Arias Ui Demo</title>
+    <title>Arias Education Platform</title>
       <link type="text/css" href="css/normalize.css">
   </head>
   <body>
