--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Arias Education Platform</title>
+    <title>Magibit official website</title>
   </head>
   <body>
     <div id="root">
